[project]
name = "ucpop"
version = "0.1.0"
description = ""
authors = [
    {name = "Tassos Manganaris"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "unified-planning (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
