[project]
name = "ucpop"
version = "0.1.0"
description = ""
authors = [
    {name = "Tassos Manganaris"}
]
readme = "README.org"
requires-python = ">=3.10"
dependencies = [
    "unified-planning (>=1.2.0,<2.0.0)",
    "frozendict (>=2.4.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
